--- a/Presentacion/Web.config
+++ b/Presentacion/Web.config
@@ -6,13 +6,15 @@
 <configuration>
 
 	<connectionStrings>
-		<add name="SpaDB" connectionString="Data Source=DESKTOP-E6LPN8Q;Initial Catalog=SpaDB;Integrated Security=True" providerName="System.Data.SqlClient" />
-	</connectionStrings>		
+		<add name="SpaDB"
+			 connectionString="Data Source=LAPTOP-PAHPU2LO;Initial Catalog=BellezaTotal;Integrated Security=True"
+			 providerName="System.Data.SqlClient" />
+	</connectionStrings>	
 	
 	
 	
   <system.web>
-    <compilation debug="true" targetFramework="4.7.2" />
+    <compilation debug="true" targetFramework="4.7.2" /> 
     <httpRuntime targetFramework="4.7.2" />
     <pages>
       <namespaces>
